<resources>
    <string name="app_name">Aurora</string>
    <string name="user_name">User Name:</string>
    <string name="please_enter_your_user_name">enter your user name</string>
    <string name="please_enter_your_phone_number">enter your phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="verify">Verify</string>
    <string name="enter_code_from_message">enter code from message</string>

    <string name="drug_name">Drug Name</string>
    <string name="reminders">Reminders</string>
    <string name="suspended">Suspended</string>
    <string name="active">Active</string>
    <string name="refill">Refill</string>
    <string name="instructions">Instructions</string>
    <string name="howToUse">How to use</string>
    <string name="before_eating">Before eating</string>
    <string name="add_dose">ADD DOSE</string>
    <string name="select_start_day_hint">Select Start Day</string>
    <string name="selcet_end_day_hint">Select End Day</string>
    <string name="select_time_hint">Select Time</string>
    <string name="medication_days">Medication Days :</string>
    <string name="enter_name_medication">Enter Name Medication</string>
    <string name="enter_strength">Enter Strength</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_time">Select Time</string>
    <string name="the_reason_of_taking_this_drug">The reason of taking this drug</string>
    <string name="add_medication">Add Medication</string>
    <string name="whyTakingThisMedicine">Why Taking this medicine?</string>
    <string name="dosageLeft">Dosages left</string>
    <string name="dosagesPerPack">Dosage per pack</string>
    <string name="title_activity_main_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_medication">Medication</string>
    <string name="title_taker">Taker</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="deleteMedicine">Delete Medicine</string>
    <string name="doYouWantToDeleteThisMedicine">Do you want to delete this medicine ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="youshould_take">\"You should take medicine \"</string>
    <string name="take">Take</string>
    <string name="dismiss">Dismiss</string>
    <string name="scheduledFor">"Scheduled for "</string>
    <string name="space">&#160;</string>
    <string name="back_in_five_minuts">will back in( 5 )minutes</string>
    <string name="doYouWantToSaveMedicine">Do you want to edit this medicine ?</string>
    <string name="please_enter_your_email">please enter your email</string>
    <string name="please_enter_your_password">please enter your password</string>
    <string name="email_already_registered">Email Already Registered</string>
    <string name="doYouWantToSignInDirect">Do You Want To Sign In Direct</string>
    <string name="sign_in">Sign In</string>
    <string name="doYouWantRefillReminder">Do you want refill reminder ?</string>
    <string name="remind_me">Remind me</string>
    <string name="no_thanks">No thanks</string>
    <string name="how_many_dosages_you_have">How many dosages you have ?</string>
    <string name="no_of_dosages_you_currently_have">No of dosages you currently have</string>
    <string name="no_of_dosages_per_pack">No of dosages per pack</string>
    <string name="enter_number_of_dosages_per_pack">Enter Number of dosages per pack</string>
    <string name="pleaseEnterNoOfCurrentDosages">Please enter no of dosages</string>
    <string name="pleaseEnterNoOfDosagesPerPack">Please enter number of dosages per pack</string>
    <string name="taken">Taken</string>
    <string name="missed">Missed</string>
    <string name="remind_me_on">Remind me on</string>
    <string name="howManyDosagesToAdd">How many dosages You want to add ?</string>
    <string name="noOfDosagesToAdd">Number of dosage to add\nYou currently have 5 dosages left </string>
    <string name="you_currently_have">You currently Have :</string>
    <string name="pleaseEnterNumberToAdd">Please enter number of dosages to add</string>
    <string name="suspend">Suspend</string>
    <string name="activate">Activate</string>
    <string name="refilMsgVofification">Don\'\'t forget to Refill ( {0} {1} ) you set refill reminder when left ({2}) you have now only ({3})</string>
    <string name="next" >Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="description_medicine">Pill reminder and alarm for all medication needs pill and medicine reminders, drug-to-drug interactions</string>
    <string name="title_alert">Pill reminder and alarm for all\n medication needs and refill</string>
    <string name="description_alert">helps you manage and take your medication on time with our first-of-its-kind cloud-synced mobile medication management platform</string>
    <string name="description_log"><![CDATA[" Daily, weekly & monthly med reporting with logbook to share with your doctor"]]></string>
    <string name="title_log">Medicine reporting</string>
    <string name="title_taker_intro">Family and caregiver support</string>
    <string name="description_taker">connect your caregivers or doctor on the app so they’ll see real-time reports on how you’re doing taking your medication as directed.</string>
    <string name="powerOptimizationTitle">"Do you want to Enable App in Optimize mode "</string>
    <string name="OptimzeTitle">"Ignore Power Optimze "</string>
    <string name="yes">Yes</string>
    <string name="EnableNotiDialog">Enable Notification Dialog</string>
    <string name="EnableNotiDialogContent">Do you want  enable notification dialog to show you foses and refill over apps?</string>

</resources>