<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iti.aurora.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_medication"
        android:name="com.iti.aurora.ui.Medication"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_medication" />

    <fragment
        android:id="@+id/navigation_taker"
        android:name="com.iti.aurora.ui.TakerFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_taker" />
    <fragment
        android:id="@+id/navigation_logFragment"
        android:name="com.iti.aurora.ui.LogFragment"
        android:label="LogFragment"
        tools:layout="@layout/fragment_log" />
</navigation>