<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="340dp"
        android:padding="24dp">

        <TextView
            android:id="@+id/refillMedicineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howManyDosagesToAdd"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/youCurrentlyHaveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_currently_have"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/refillMedicineTextView"
            app:layout_constraintTop_toBottomOf="@+id/refillMedicineTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noOfDosagesToAddTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youCurrentlyHaveTextView">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/noOfDosagesToAddTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/noOfDosagesToAdd"
                android:inputType="number"
                android:maxLines="2"
                android:minWidth="320dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/refillButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/refill"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noOfDosagesToAddTextInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>