<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".usersystem.signup.view.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_margin="12dp"
        android:layout_weight="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="0.25"
        android:text="@string/user_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="0.4"
        android:autofillHints=""
        android:hint="@string/please_enter_your_user_name"
        android:inputType="text"
        android:text="walid zain"
        android:textColorHint="#757575" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">


        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:ccp_autoDetectCountry="true"
            app:ccp_countryAutoDetectionPref="SIM_ONLY"
            app:ccp_excludedCountries="HK,MO,TW,CN"
            app:ccp_showArrow="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="false"
            app:ccp_areaCodeDetectedCountry="true"/>

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="name"
            android:hint="@string/please_enter_your_phone_number"
            android:inputType="phone"
            android:maxLength="12"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:text="1099856943"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:layout_weight="0.4"
        android:text="@string/sign_up"
        android:textAlignment="center" />


</LinearLayout>