<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:id="@+id/topBarCustom_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topBarHeight"
        android:background="@color/primary_color"
        android:minHeight="@dimen/topBarHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Edit Medicine"
            android:textColor="@color/white"
            android:textSize="@dimen/topBarTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editMedication"
        style="@style/inputEditText"
        app:errorEnabled="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarCustom_relativeLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditMedication_inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="1"
            android:hint="@string/enter_name_medication"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@+id/formEditMedication_spinner" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/formEditMedication_CardView"
        style="@style/inputEditText"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_editMedication"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_editMedication"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_editMedication">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/formEditMedication_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name" />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        style="@style/inputEditText"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="@+id/formEditMedication_CardView"
        app:layout_constraintStart_toStartOf="@+id/formEditMedication_CardView"
        app:layout_constraintTop_toBottomOf="@id/formEditMedication_CardView">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/strengthEditMedication_TextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"

            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/strengthEditMedication_inputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_strength"

                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/recurrencyEditMedication_spinner" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/strenghtEditMedication_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/strengthEditMedication_TextInputEditText"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/strengthEditMedication_TextInputEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/recurrencyEditMedication_cardview"
        style="@style/inputEditText"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/recurrencyEditMedication_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/inputEditText"
        app:layout_constraintEnd_toEndOf="@+id/recurrencyEditMedication_cardview"
        app:layout_constraintStart_toStartOf="@+id/recurrencyEditMedication_cardview"
        app:layout_constraintTop_toBottomOf="@+id/recurrencyEditMedication_cardview">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/instructionsEditMedication_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:spinnerMode="dropdown" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/startEditDate_textView"
        style="@style/timeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:text="@string/start_date"
        app:layout_constraintEnd_toEndOf="@+id/recurrencyEditMedication_cardview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/startDatepickerEditmedication_Textview"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_add_medication"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:hint="@string/select_start_day_hint"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/startEditDate_textView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/startEditDate_textView"
        app:layout_constraintTop_toTopOf="@+id/startEditDate_textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/endEditDate_textView"
        style="@style/timeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/end_date"
        app:layout_constraintEnd_toEndOf="@+id/startEditDate_textView"
        app:layout_constraintStart_toStartOf="@+id/startEditDate_textView"
        app:layout_constraintTop_toBottomOf="@+id/startEditDate_textView" />

    <TextView
        android:id="@+id/endEditDatePicker_textview"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_add_medication"
        android:gravity="center"
        android:hint="@string/selcet_end_day_hint"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/endEditDate_textView"
        app:layout_constraintEnd_toEndOf="@+id/startDatepickerEditmedication_Textview"
        app:layout_constraintStart_toStartOf="@+id/startDatepickerEditmedication_Textview"
        app:layout_constraintTop_toBottomOf="@+id/startEditDate_textView" />

    <TextView
        android:id="@+id/selectTimeEdit_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/select_time"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/endEditDate_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/endEditDate_textView"
        app:layout_constraintTop_toBottomOf="@+id/endEditDate_textView" />

    <TextView
        android:id="@+id/timePickerEdit_textview"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_add_medication"
        android:gravity="center"
        android:hint="@string/select_time_hint"

        android:padding="4dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/endEditDatePicker_textview"
        app:layout_constraintStart_toStartOf="@+id/endEditDatePicker_textview"
        app:layout_constraintTop_toTopOf="@+id/selectTimeEdit_textView3" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reasonOfTakingEditTextView"
        style="@style/inputEditText"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/selectTimeEdit_textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reasonEdit_inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/the_reason_of_taking_this_drug"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/datesEditMedication_cardview"
        style="@style/daysWeekCardview"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/recurrencyEditMedication_cardview"
        app:layout_constraintStart_toStartOf="@+id/recurrencyEditMedication_cardview"
        app:layout_constraintTop_toBottomOf="@id/reasonOfTakingEditTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dayEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_days"
                android:padding="20dp"
                android:textColor="@color/primary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/editMedication_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_add_medication"
        android:text="@string/edit_medication"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datesEditMedication_cardview" />

</androidx.constraintlayout.widget.ConstraintLayout>